--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,16 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+
+    //database
+    implementation('com.h2database:h2')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 
+    //lombok
+    implementation('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+    testImplementation('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
